<?xml version="1.0"?>
<package format="2">
    <name>sensor_emulator</name>
    <version>1.0.0</version>
    <description>Sensor emulator -  ROS package to publish sensor_msgs::PointCloud2 from .ply files </description>
    <author email="joanamrsdias@gmail.com">Joana Silva Dias</author>
    <maintainer email="joanamrsdias@gmail.com">Joana Silva Dias</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>Boost</depend>

    <depend>pcl_ros</depend>
    <depend>roslib</depend>
    <depend>actionlib</depend>
    <depend>sensor_emulator_msgs</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>    
    <depend>pcl_conversions</depend>

</package>
